revamped style, added frenchie jump game, filled out personal information

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Dusty Mumphrey",
+  "name": "Dusty Mumphrey Portfolio",
   "icons": [
     {
       "src": "favicon.ico",
