--- a/public/admin/config.yml
+++ b/public/admin/config.yml
@@ -9,6 +9,7 @@ collections:
     label: "Blog" 
     folder: "src/content/blog" 
     create: true 
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields: 
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Publish Date", name: "date", widget: "datetime"}
