--- a/public/config.yml
+++ b/public/config.yml
@@ -2,14 +2,14 @@ backend:
   name: git-gateway
   branch: main 
 
-media_folder: "public/images" 
+media_folder: "public/admin/images" 
 
 site_url: https://dustymumphrey.com
 
 collections:
   - name: "blog" 
     label: "Blog" 
-    folder: "public/content/blog" 
+    folder: "public/admin/content/blog" 
     create: true 
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields: 
