--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "netlify-cms-app": "^2.15.72",
     "nodemailer": "^6.9.7",
     "nodemailer-sendgrid": "^1.0.3",
+    "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.9.0",
+    "react-syntax-highlighter": "^15.5.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
